--- a/foot/src/main/resources/templates/user/signup/SignupUserForm.html
+++ b/foot/src/main/resources/templates/user/signup/SignupUserForm.html
@@ -26,7 +26,7 @@
   <div class="border-bottom shadow-sm">
     <nav class="navbar navbar-light py-2">
       <div class="container justify-content-center justify-content-lg-between">
-        <a class="navbar-brand" href="../index.html">
+        <a class="navbar-brand" href="/indexUserView">
           <img src="/user/template/assets/images/logo/ball.png" width="20" alt="" class="d-inline-block align-text-top"><strong>&nbsp;Now Futsal</strong>
         </a>
         <span class="navbar-text">
