--- a/foot/src/main/resources/templates/xdm/announcement/AnnouncementXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/announcement/AnnouncementXdmForm.html
@@ -82,7 +82,7 @@
                                 등록 하기
                             </button>
                            
-                            <a role="button" type="button" class="btn bg-black waves-effect" th:href="@{/AnnouncementList}">
+                            <a role="button" type="button" class="btn bg-black waves-effect" th:href="@{/AnnouncementXdmList}">
                                 목록
                             </a>
                             <!-- <a role="button" type="button" class="btn bg-blue-grey waves-effect">
