--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmForm.html
@@ -107,7 +107,7 @@
                                             </div>
                                         </div>
                                         
-                                        <a role="button" class="btn btn-light"  style="float: left;" th:href="@{/codeGroup/codeGroupList}">
+                                        <a role="button" class="btn btn-light"  style="float: left;" th:href="@{/codeGroup/codeGroupXdmList}">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                                                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                                             </svg>
@@ -193,8 +193,8 @@
         </div>
     </section>
 </form>
+ <div th:replace="~{xdm/include/foter :: foter}"></div>
 <script type="text/javascript">
-
 	if(document.getElementById("btnUelete")){
 		document.getElementById("btnUelete").onclick = function () {
 			document.querySelector("#modalConfirmTitle").textContent = "확 인";
@@ -202,6 +202,7 @@
 			document.querySelector("#btnModalUelete").style.display = '';
 			/* document.querySelector("#btnModalDelete").style.display = 'none'; */
 			$("#modalConfirm").modal("show");      	
+	
 		}
 	}
 	
@@ -278,4 +279,7 @@
 
 
 
- <div th:replace="~{xdm/include/foter :: foter}"></div>
+
+ 
+</body>
+</html>
