--- a/foot/src/main/resources/templates/xdm/include/foter.html
+++ b/foot/src/main/resources/templates/xdm/include/foter.html
@@ -14,7 +14,8 @@
     <!-- <script src="/xdm/template/master/js/admin.js"></script> -->
     <script src="/xdm/template/master/js/pages/ui/modals.js"></script>
         <!-- Jquery Core Js -->
-    <script src="/xdm/template/master/plugins/jquery/jquery.min.js"></script>
+    <!-- <script src="/xdm/jquery/jquery-3.7.1.min.js"></script> -->
+  	<script src="/xdm/template/master/plugins/jquery/jquery.min.js"></script> 
 
     <!-- Bootstrap Core Js -->
     <script src="/xdm/template/master/plugins/bootstrap/js/bootstrap.js"></script>
@@ -46,7 +47,6 @@
     <!-- <script src="/xdm/template/master/js/demo.js"></script> -->
 	
 	    <!-- jquery  -->
-    <script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
     <!--체크박스 전체 체크 단독 체크-->
     <!-- <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -68,5 +68,4 @@
             });
         });
     </script> -->
-</body>
-</html>
+
