--- a/foot/src/main/resources/templates/xdm/include/head.html
+++ b/foot/src/main/resources/templates/xdm/include/head.html
@@ -311,16 +311,16 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/FutsalForm}">풋살장 등록</a>
+                                <a th:href="@{/FutsalXdmForm}">풋살장 등록</a>
                             </li>
                             <li>
-                                <a th:href="@{/FutsalList}">풋살장 List</a>
+                                <a th:href="@{/FutsalXdmList}">풋살장 List</a>
                             </li>
                             <li>
-                                <a th:href="@{/AnnouncementForm}">풋살장 공지사항 등록</a>
+                                <a th:href="@{/AnnouncementXdmForm}">풋살장 공지사항 등록</a>
                             </li>
                             <li>
-                                <a th:href="@{/AnnouncementList}">풋살장 공지사항 List</a>
+                                <a th:href="@{/AnnouncementXdmList}">풋살장 공지사항 List</a>
                             </li>
                         </ul>
                     </li>
@@ -337,7 +337,7 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/UserMemberList}">개인프로젝트 회원 정보</a>
+                                <a th:href="@{/MemberXdmList}">개인프로젝트 회원 정보</a>
                             </li>
                             <li>
                                 <a href="#">??</a>
@@ -379,10 +379,10 @@
                         </a>
                         <ul class="ml-menu">
                             <li>
-                                <a th:href="@{/code/codeList}">코드관리</a>
+                                <a th:href="@{/code/codeXdmList}">코드관리</a>
                             </li>
                             <li>
-                                <a th:href="@{/codeGroup/codeGroupList}">코드그룹관리</a>
+                                <a th:href="@{/codeGroup/codeGroupXdmList}">코드그룹관리</a>
                             </li>
                         </ul>
                     </li>
