--- a/foot/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
+++ b/foot/src/main/resources/templates/xdm/signinadmin/SigninAdimn.html
@@ -201,7 +201,7 @@
 						
 						 if (response.rt == "success") {
 				            	
-				                window.location.href = "/UserMemberList"; // 성공시 회원 정보 리스트로 가기
+				                window.location.href = "/MemberXdmList"; // 성공시 회원 정보 리스트로 가기
 					
 						 } else if (response.rt != "success"){
 							 
