--- a/foot/src/main/resources/templates/xdm/usermember/MemberXdmView.html
+++ b/foot/src/main/resources/templates/xdm/usermember/MemberXdmView.html
@@ -91,7 +91,7 @@
                                 등록 하기
                             </button> -->
                            
-                            <a role="button" type="button" class="btn bg-black waves-effect" href="/UserMemberList">
+                            <a role="button" type="button" class="btn bg-black waves-effect" href="/MemberXdmList">
                                 목록
                             </a>
                             <!-- <button type="button" class="btn bg-blue-grey waves-effect">
