--- a/foot/src/main/resources/templates/user/include/account.html
+++ b/foot/src/main/resources/templates/user/include/account.html
@@ -70,12 +70,12 @@
 									<hr />
 								</li>
 								<!-- nav item -->
-								<li class="nav-item">
+								<!-- <li class="nav-item">
 									<a class="nav-link" href="javascript:void(0);" id="btnSignout">
 										<i class="feather-icon icon-log-out me-2"></i>
 										로그아웃
 									</a>
-								</li>
+								</li> -->
 							</ul>
 						</div>
 					</div>
@@ -83,7 +83,7 @@
 					
 					
 
-<script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
+<!-- <script src="/xdm/jquery/jquery-3.7.1.min.js"></script>
 
 <script type="text/javascript">
 
@@ -117,5 +117,5 @@
 
 
 
-</script>
+</script> -->
 </th:block>
